Update to v1.3.0 with new features and tools
- Updated Gemini model to gemini-live-2.5-flash-preview-native-audio-09-2025
- Added audio saving functionality with date-wise and bot-wise directory structure
- Added transcript tracking and logging for each session
- Updated Lisa persona instructions with Hi Voice business knowledge base
- Added error handling and context injection for tool handlers
- Added google_calendar_helper.js utility
- Added get_auth_url.js and get_token.js scripts
- Updated Dockerfile to include all tool directories and logs
- Enhanced avr_hangup.js with detailed error logging

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ GEMINI_INSTRUCTIONS="You are a helpful assistant that can answer questions and h
 
 # Method 3: Local file (lowest priority) - uncomment to use
 #GEMINI_FILE_INSTRUCTIONS="./instructions.txt"
+
+# Audio Saving Configuration
+BOT_NAME=default_bot
+AUDIO_SAVE_DIR=./saved_audios
