--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@alexanderolsen/libsamplerate-js": "^2.1.2",
-    "@google/genai": "^1.16.0",
+    "@google/genai": "^1.34.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "googleapis": "^105.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
